        * Added modifier `invocable` for types with operator(). Thank you
          Dominic Koepke for the suggestion and the draft implementation.

v12 2023-07-20

        * Fixed a bug where fmt formatter function was not const, as it must be
          per the documentation. Thank you Tim Blechmann for submitting the
          fix.

        * Strong types can be weakly_ordered, strongly_ordered and
          partially_ordered, using operator <=> in C++20 and later. Huge thanks
          to Björn Schäpers and Tim Blechmann for the suggestions, discussions
          and infinite patience.

v11 2023-05-02

        * A strong type can now be used as an NTTP (Non Type Template Parameter)

            using type = strong::type<int, struct int_>;

            template <type t>
            struct S {
                constexpr operator int() const { return value_of(t);}
            };

            int main()
            {
                S<type{3}> obj;
                return obj;
            }

          Thank you Toni Neubert for the implementation.

v10 2023-02-03

        * Corrected the test for, and use of, concepts when specializing
          std::numeric_limits<> for strong::arithmetic types. Thank you
          Björn Schäpers for reporting.

v9 2023-01-23

        * Lowered the minimum required CMake version to 3.7, unless unit-tests
          are built.

        * A type predicate strong::type_is_v<type, modifier> has been introduced.
          It can be used in compile time tests for generic code to ensure that
          a strong type has the necessary modifiers. Example:

          using type = strong::type<int, struct type_,
                                    strong::ordered,
                                    strong::ordered_with<int, long>>;
          static_assert(strong::type_is_v<type, strong::ordered>);
          static_assert(strong::type_is_v<type, strong::ordered_with<long>>);
