@@ -22,8 +22,14 @@ namespace strong
 {
 struct ostreamable
 {
-    template <typename T>
+    template <typename T, typename = void>
     class modifier
+    {
+        static_assert(impl::always_false<T>,
+            "Underlying type support stream output via operator<<");
+    };
+    template <typename T>
+    class modifier<T, impl::void_t<decltype(std::declval<std::ostream&>() << std::declval<const underlying_type_t<T>&>())>>
     {
     public:
         friend
